--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "jens-js-utils",
-  "version": "0.0.1",
-  "description": "javascript utils by jennifer",
+  "name": "lazy-z",
+  "version": "1.0.0",
+  "description": "lazy-z is a light-weight NodeJS library for assorted shortcuts and utilities",
   "main": "index.js",
   "scripts": {
     "test": "mocha unit-tests/",
