--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lazy-z",
-  "version": "1.3.6",
+  "version": "1.4.0",
   "description": "lazy-z is a light-weight NodeJS library for assorted shortcuts and utilities",
   "main": "index.js",
   "scripts": {
@@ -13,5 +13,8 @@
     "chai": "^4.3.6",
     "mocha": "^9.2.2",
     "nyc": "^15.1.0"
+  },
+  "dependencies": {
+    "regex-but-with-words": "^1.5.0"
   }
 }
