--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "nyc": "^15.1.0"
   },
   "dependencies": {
-    "regex-but-with-words": "^1.5.0"
+    "regex-but-with-words": "^1.5.0",
+    "sinon": "^15.0.0"
   }
 }
