--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lazy-z",
-  "version": "1.5.2",
+  "version": "1.6.0",
   "description": "lazy-z is a light-weight NodeJS library for assorted shortcuts and utilities",
   "main": "index.js",
   "scripts": {
@@ -12,10 +12,10 @@
   "devDependencies": {
     "chai": "^4.3.6",
     "mocha": "^9.2.2",
-    "nyc": "^15.1.0"
+    "nyc": "^15.1.0",
+    "sinon": "^15.0.0"
   },
   "dependencies": {
-    "regex-but-with-words": "^1.5.0",
-    "sinon": "^15.0.0"
+    "regex-but-with-words": "^1.5.0"
   }
 }
