--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha unit-tests/",
+    "pretty": "npx prettier --write .",
     "coverage": "npx nyc npm run test"
   },
   "author": "Jennifer Valle",
@@ -13,6 +14,7 @@
     "chai": "^4.3.6",
     "mocha": "^9.2.2",
     "nyc": "^15.1.0",
+    "prettier": "^3.0.3",
     "sinon": "^15.0.0"
   },
   "dependencies": {
